# signal-noise-tracker

./: .gitignore  DEPLOYMENT_CHECKLIST.md  Dockerfile  IMPLEMENTATION_STATUS.md  README.md  SETUP.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_quick.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
config/: agents.yaml  agents.yaml.example  config.yaml  feeds.yaml  feeds.yaml.example  settings.yaml.example  sources.yaml  triggers.yaml
core/: agent_trigger.py  db.py  rss_parser.py  scheduler.py
data/: cronjob.db
docs/: AGENT_DESIGNS.md  README.md
modules/: __init__.py  cron.py
modules/config/: __init__.py
modules/logger/: __init__.py  formatter.py
modules/rss/: __init__.py  filter.py  manager.py  parser.py
modules/triggers/: __init__.py  manager.py
scripts/: init.sh  run_cron.sh
tests/: __init__.py  __main__.py  test_agent_trigger.py  test_database.py  test_feed_parser.py  test_integration.py  test_rss_parser.py  test_triggers.py
